tests/paczka1/fuzzy1/84047303.err
Error in line 6: qUEBNB4q A153 56,2
Error in line 11: smcL3MgE9GH A728 57,4
Error in line 8: ADgzTXk0PGE A728 92,0
Error in line 27: ADgzTXk0PGE A153 56,3
Error in line 29: EgKv43NU7SQ A284 81,7
Error in line 31: ADgzTXk0PGE A284 10,8
